crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/07_empty_form.tm
-- expect: TM2002
let x = 1;; x
